2005-11-12  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* po/fr.po: Add translations for the sponsoring pages

2005-11-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* fr/about/index.html: typo.

2005-11-10  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* fr/: updates (about/pubs, about/faq, about/index /index)

2005-11-10  Jean-Charles Malahieude  <lilyfan@wanadoo.fr>

	* fr/contact.ihtml: links updated for lilypond-user-fr list

2005-11-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/sponsor/options.html (href): sponsoring -> donation.

2005-11-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/sponsor/options.html: add paypal logo.

	* site/about/index.html (href): image credits.

	* site/about/faq.html: remove "how to thank question"
	remove macro drivel.

	* site/sponsor/options.html (Module): new file.

	* site/sponsor/natura.html (Module): new file

	* site/sponsor/index.html (Module): new file

	* site/images/trumpet-notes-poagao.jpeg (Module): new image.

	* site/images/tools-flickr-sus.jpeg (Module): new image

	* site/images/bug-face-openphoto-teun.jpeg (Module): new image

	* site/images/cello-blonde-flickr-sillygwailo.jpeg: new image.

2005-11-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install/stable.ihtml: Update Debian and Ubuntu entries.

2005-11-04  Gauvain Pocentek <gauvainpocentek@yahoo.fr>

	* fr/contact.ihtml: gmane links added

2005-11-04  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install/stable.ihtml: Update windows and autopackage.

2005-11-03  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/images/lisplogo_warning_128.png (Module): new file.

	* nl/contact.ihtml: gmane links.

	* nl/about/index.html: add lisperati logo.

	* site/install/stable.ihtml: bump MacOSX to 2.6.4.  use gmane for
	bug-lilypond@gnu.org

2005-11-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/contact.ihtml: add gmane links for all lists.

2005-10-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install/stable.ihtml: Update mingw to 2.6.4-2.
