@@ -1,0 +1,35 @@
+<!--
+    Translation of CVS Revision: 1.2
+    
+    Translators must leave this comment in tact, but remove any dollar
+    signs ($) from the CVS Revision indicator.
+
+    When revising a translation, copy the CVS Revision number from the
+    original source file.  !-->
+
+<p align="right"><font size="+4"><em>Les bons logiciels</em> </font> <font
+size="+1"> ne sont pas d&ucirc;s au hasard.</font></p>
+Comme pour la musique, &eacute;crire des logiciels demande des comp&eacute;tences
+particuli&egrave;res, un grand d&eacute;vouement et surtout beaucoup de temps. Votre
+soutien financier nous permet de subvenir &agrave; nos besoins sans passer trop de
+temps pour un autre travail, et en nous consacrant &agrave; Lilypond. 
+
+<p>Si LilyPond vous est utile et agr&eacute;able, <b>aidez-nous</b> &agrave; le garder
+libre en le soutenant financi&egrave;rement. </p>
+
+<div style="overflow:auto;">
+<p><img src="@IMAGES@/grenade-hanwen.jpeg" align="right" width="150"> <font
+size="+2">Ayez bonne conscience</font></p>
+
+<p>En t&eacute;l&eacute;chargeant LilyPond, vous b&eacute;n&eacute;ficiez des contributions d'autres
+personnes. De m&ecirc;me, ce que vous financerez sera disponible pour l'ensemble
+des utilisateurs. Bref, <b>chacun est gagnant</b>.</p>
+</div>
+<p><font size="+2">Le client est roi</font></p>
+ Votre argent nous aide &agrave; <b>vous aider</b>. C'est notre attention &agrave; vos
+probl&egrave;mes, vos souhaits et vos besoins que vous payez. Vous contr&ocirc;lez alors
+les priorit&eacute;s de d&eacute;veloppement.
+
+<p align="right"><a href="options.html">Ce que vous pouvez faire</a> <!--Every hour we spend on LilyPond, is one hour less for making money.-->
+ </p>
+</body>
