@@ -1,0 +1,31 @@
+<!--
+    Translation of $CVS Revision: 1.1
+    
+    Translators must leave this comment in tact, but remove any dollar
+    signs ($) from the CVS Revision indicator.
+
+    When revising a translation, copy the CVS Revision number from the
+    original source file.  !-->
+
+<ul>
+<li>Partagez votre passion pour LilyPond&nbsp;: la publicit&eacute;
+  augmente le nombre d'utilisateurs, ce qui n'est que meilleur. Donc&nbsp;:
+<ul>
+<li> parlez de LilyPond &agrave; vos amis&nbsp;;
+<li> ne supprimez pas le pied-de-page "Music engraving by LilyPond", ou traduisez-le&nbsp;;
+<li> citez LilyPond si vous l'utilisez pour des ouvrages, ou des articles.
+</ul>
+
+<li>Dites-nous que vous appr&eacute;ciez LilyPond, nous aimons toujours
+l'entendre&nbsp;: envoyez-nous un courriel ou une carte postale &agrave;
+<blockquote>
+          Jan &amp; Han-Wen<br>
+          p/a Han-Wen Nienhuys<br>
+          Spinozaweg 68<br>
+          3532 SH Utrecht,<br>
+          The Netherlands 
+</blockquote>
+<li>Nous recevons &eacute;galement avec plaisir des &eacute;chantillons de la
+boisson ou de la musique de votre choix.
+</ul>
+
