@@ -1,0 +1,97 @@
+<!--
+    Translation of CVS Revision: 1.3
+    
+    Translators must leave this comment in tact, but remove any dollar
+    signs ($) from the CVS Revision indicator.
+
+    When revising a translation, copy the CVS Revision number from the
+    original source file.  !-->
+
+
+<div style="overflow: auto">
+
+
+<h2>Il <em>manque</em> quelque chose &agrave; LilyPond&nbsp;? </h2>
+<img align="right"
+src="@IMAGES@/tools-flickr-sus.jpeg" width=200>
+
+Demandez-nous de la cr&eacute;er&nbsp;!
+
+<p>
+Si une fonction particuli&egrave;re vous manque, nous pouvons la construire
+pour vous. LilyPond &eacute;tant un logiciel libre, vous pouvez tout &agrave; fait
+partager les frais avec d'autres utilisateurs. <a
+href="http://lilypond-design.com/sponsor/">En savoir plus...</a>
+</div>
+
+<br><br>
+
+
+<div style="overflow: auto">
+<p class="boxout boxoutright">
+<em>R&eacute;alisation rapide, code robuste et prix abordables</em>
+</p>
+
+
+ <img src="@IMAGES@bug-face-openphoto-teun.jpeg" align="left"
+ width="130"
+style="padding-right: 8px;"><p>
+
+ <h2>Vous avez trouv&eacute; un <em>bogue</em>&nbsp;?</h2>
+  <a href="http://lilypond-design.com/">Demandez-nous</a> de le corriger&nbsp;!
+
+Notre exp&eacute;rience nous permet de corriger un bogue en quelques jours
+ou m&ecirc;me quelques heures. <a
+href="http://lilypond-design.com/sponsor/">En savoir plus...</a> </div>
+
+<br><br>
+
+
+
+<div style="overflow: auto">
+<img src="@IMAGES@/cello-blonde-flickr-sillygwailo.jpeg" align=right width=300>
+
+
+<h2>
+Vous <em>appr&eacute;ciez LilyPond</em>&nbsp;?  </h2>
+
+Faites une donnation&nbsp;! Nous sugg&eacute;rons la somme de 25 euros.
+Vous pouvez l'envoyer par
+
+<blockquote>
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+<input type="hidden" name="cmd" value="_xclick"/>
+<input type="hidden" name="business" value="hanwen@xs4all.nl"/>
+<input type="hidden" name="item_name" value="LilyPond donation"/>
+<input type="hidden" name="currency_code" value="EUR">
+<input type="hidden" name="item_number" value="2005"/>
+<input type="image"
+src="http://images.paypal.com/images/x-click-but02.gif" name="submit" alt="Make payments with PayPal - it's fast, free and secure!"/>
+</form>
+</blockquote>
+ &agrave;
+<blockquote>
+<tt>hanwen@xs4all.nl</tt>
+</blockquote>
+
+</div>
+
+<p align=right>
+&laquo;&nbsp;Mais <a href="natura.html">je suis vraiment pauvre</a>&nbsp;&raquo;
+
+<br><br>
+
+
+
+<em><font size="-1"> Cr&eacute;dits images&nbsp;: outils&nbsp;: <a
+href="http://www.flickr.com/photos/sus/">.susanne</a> (flickr.com), visage
+&agrave; l'insecte&nbsp;: <a href="http://openphoto.net/user/profile.html?user_id=973">Jan
+Teunis</a> (openphoto.net), violoncelliste&nbsp;: <a
+href="http://www.flickr.com/photos/sillygwailo/">sillygwailo</a>
+(flickr.com).</font></em> </font> </em>
+
+
+
+
+
+	
