@@ -1,3 +1,7 @@
+2005-11-13   Gauvain Pocentek  <gauvainpocentek@yahoo.fr>
+
+	* fr/sponsor/*html: new translated files
+
 2005-11-12  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>
 
 	* po/fr.po: Add translations for the sponsoring pages
